@@ -1,10 +1,6 @@
-package com.zh.util;
+package com.zh.encrypt;
 
 import com.zh.constant.CharsetNameConsts;
-import org.apache.commons.lang3.StringUtils;
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
-
 import java.io.IOException;
 import java.io.UnsupportedEncodingException;
 import java.util.Objects;
@@ -12,7 +8,7 @@ import java.util.Objects;
 /**
  * base64加解密
  */
-public class Base64Util {
+public class Base64 {
 
     /**
      * 加密后默认有\r\n分隔符，替换掉
@@ -23,7 +19,7 @@ public class Base64Util {
     private static String encrypt(String source, String charsetName) {
         Objects.requireNonNull(source, "源字符串不能为null");
         try {
-            return (new BASE64Encoder()).encode(source.getBytes(charsetName))
+            return org.apache.commons.codec.binary.Base64.encodeBase64String(source.getBytes(charsetName))
                     .replaceAll("[\\r\\n]", "");
         } catch (UnsupportedEncodingException e) {
             return null;
@@ -37,7 +33,7 @@ public class Base64Util {
     private static String decrypt(String base64_source, String charsetName) {
         Objects.requireNonNull(base64_source, "加密字符串不能为null");
         try {
-            return new String((new BASE64Decoder()).decodeBuffer(base64_source), charsetName);
+            return new String(org.apache.commons.codec.binary.Base64.decodeBase64(base64_source), charsetName);
         } catch (IOException e) {
             e.printStackTrace();
             return null;
